--- a/demos/debug/index.html
+++ b/demos/debug/index.html
@@ -5,5 +5,5 @@
 	
 </head>
 <body>
-<!-- this page is simply meant to load the scripts, nothing more -->
+ this page is simply meant to load the scripts, nothing more 
 </body>
