--- a/demos/primitives/cube.html
+++ b/demos/primitives/cube.html
@@ -17,7 +17,14 @@
 	var renderer = new quack.renderers.GLRenderer(canvas, {
 		width: canvas.clientWidth,
 		height: canvas.clientHeight,
-		clearColor: new quack.math.vector4(0, 0, 0, 1),
+		clearColor: new quack.math.vector4(0.0, 0.0, 0.0, 1.0),
 		antialias: true
 	});
+	var scene = new quack.core.scene("scene1");
+	var cubeG = new quack.cubeGeometry(); //at (0,0,0)
+	var camera = new quack.camera.orthoCamera(-1.0, 1.0, 1.0, -1.0, 10, 0);
+	scene.append(cubeG);
+	
+	renderer.render(scene, camera);
+	
 </script>
