--- a/demos/primitives/cube.html
+++ b/demos/primitives/cube.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<script type="text/javascript" src="../../dist/js/readable/quack.js"></script>
-	
+	<script type="text/javascript" src="cube.js"></script>
 </head>
-<body>
+<body onload=initDemo()>
 	<div id="container" style="width:500px; height:500px">
 		<canvas id="view" style="width:500px; height:500px">
 			
@@ -13,34 +13,3 @@
 	<input type="text" placeholder="scaleX" id="scaleX"/><input type="text" placeholder="scaleY" id="scaleY"/><input type="text" placeholder="scaleZ" id="scaleZ"/><br>
 	<input type="button" value="apply" id="apply"/>
 </body>
-
-<script type="text/javascript">
-	var canvas = document.getElementById("view");
-	var renderer = new quack.renderers.GLRenderer(canvas, {
-		width: canvas.clientWidth,
-		height: canvas.clientHeight,
-		clearColor: new quack.math.vector4(0.0, 0.0, 0.0, 1.0),
-		antialias: true
-	});
-	var scene = new quack.core.scene("scene1");
-	var cubeG = new quack.cubeGeometry(); //at (0,0,0)
-	var camera = new quack.camera.orthoCamera(-1.0, 1.0, 1.0, -1.0, 10, 0);
-	camera.setPosition(1, 2, 5);
-	camera.setLookAt(0, 0, 0);
-	camera.update();
-	scene.append(cubeG);
-	
-	renderer.render(scene, camera);
-	
-	var scaleX = document.getElementById("scaleX");
-	var scaleY = document.getElementById("scaleY");
-	var scaleZ = document.getElementById("scaleZ");
-	var button = document.getElementById("apply");
-	button.onclick = function(e) {
-		//debugger;
-		var valX = Number(scaleX.value) || 1, valY = Number(scaleY.value) || 1, valZ = Number(scaleZ.value) || 1;
-		cubeG.setScale(valX, valY, valZ);
-		renderer.render(scene, camera);
-	};
-	
-</script>
