Fixed minor bug in demo that caused the view screen to scale up

--- a/demos/primitives/cube.html
+++ b/demos/primitives/cube.html
@@ -6,7 +6,7 @@
 </head>
 <body onload=initDemo()>
 	<div id="container" style="width:500px; height:500px">
-		<canvas id="view" style="width:500px; height:500px">
+		<canvas id="view" width="500" height="500">
 			
 		</canvas>
 	</div>
