Per vertex color picking added to triangle demo

--- a/demos/primitives/triangle.html
+++ b/demos/primitives/triangle.html
@@ -10,6 +10,9 @@
 			
 		</canvas>
 	</div>
-<!-- 	<input type="text" placeholder="scaleX" id="scaleX"/><input type="text" placeholder="scaleY" id="scaleY"/><input type="text" placeholder="scaleZ" id="scaleZ"/><br> -->
-<!-- 	<input type="button" value="apply" id="apply"/> -->
+	Enter RGB values for each vertex in range of 0.0 - 1.0<br>
+	<input type="text" placeholder="Vertex 1 Red" id="v1r"/><input type="text" placeholder="Vertex 1 Green" id="v1g"/><input type="text" placeholder="Vertex 1 Blue" id="v1b"/><br>
+	<input type="text" placeholder="Vertex 2 Red" id="v2r"/><input type="text" placeholder="Vertex 2 Green" id="v2g"/><input type="text" placeholder="Vertex 2 Blue" id="v2b"/><br>
+	<input type="text" placeholder="Vertex 3 Red" id="v3r"/><input type="text" placeholder="Vertex 3 Green" id="v3g"/><input type="text" placeholder="Vertex 3 Blue" id="v3b"/><br>
+	<input type="button" value="apply" id="apply"/>
 </body>
