--- a/demos/camera/perspectiveCube.html
+++ b/demos/camera/perspectiveCube.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<script type="text/javascript" src="../../dist/js/readable/quack.js"></script>
-	<script type="text/javascript" src="rotatingCube.js"></script>
+	<script type="text/javascript" src="perspectiveCube.js"></script>
 </head>
 <body onload=initDemo()>
 	<div id="container" style="width:500px; height:500px">
@@ -11,6 +11,6 @@
 		</canvas>
 	</div>
 	Enter the rotation angle per second for each axis<br>
-	<input type="text" value=0 placeholder="rotX" id="rotX"/><input value=0 type="text" placeholder="rotY" id="rotY"/><input value =0 type="text" placeholder="rotZ" id="rotZ"/><br>
+	<input type="text" placeholder="rotX" id="rotX"/><input type="text" placeholder="rotY" id="rotY"/><input type="text" placeholder="rotZ" id="rotZ"/><br>
 	<input type="button" value="apply" id="apply"/>
 </body> 
