--- a/demos/camera/orthographicCam.html
+++ b/demos/camera/orthographicCam.html
@@ -5,9 +5,10 @@
 	<script type="text/javascript" src="orthographicCam.js"></script>
 </head>
 <body onload=initDemo()>
-	<div id="container" style="width:500px; height:500px">
+	<div id="container" style="width:500px; height:500px; float:left;">
 		<canvas id="view" width="500" height="500">
 			
 		</canvas>
 	</div>
+	<div id="textArea" style="width:500px; height: 500px; margin-left: 520px;"></div>
 </body> 
