--- a/demos/primitives/cube.html
+++ b/demos/primitives/cube.html
@@ -5,11 +5,12 @@
 	<script type="text/javascript" src="cube.js"></script>
 </head>
 <body onload=initDemo()>
-	<div id="container" style="width:500px; height:500px">
+	<div id="container" style="width:500px; height:500px; float:left;">
 		<canvas id="view" width="500" height="500">
 			
 		</canvas>
 	</div>
+	<div id="textArea" style="width:500px; height: 500px; margin-left: 520px;"></div>
 	<input type="text" placeholder="scaleX" id="scaleX"/><input type="text" placeholder="scaleY" id="scaleY"/><input type="text" placeholder="scaleZ" id="scaleZ"/><br>
 	<input type="button" value="apply" id="apply"/>
 </body>
