Per-face color definition for cube geometry. Added sphere geometry and demos

--- a/demos/primitives/sphere.html
+++ b/demos/primitives/sphere.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<script type="text/javascript" src="../../dist/js/readable/quack.js"></script>
-	<script type="text/javascript" src="rotatingCube.js"></script>
+	<script type="text/javascript" src="sphere.js"></script>
 </head>
 <body onload=initDemo()>
 	<div id="container" style="width:500px; height:500px; float:left;">
@@ -14,13 +14,4 @@
 	Enter the rotation angle per second for each axis<br>
 	<input type="text" value=0 placeholder="rotX" id="rotX"/><input value=0 type="text" placeholder="rotY" id="rotY"/><input value =0 type="text" placeholder="rotZ" id="rotZ"/><br>
 	<input type="button" value="Apply Rotation" id="apply"/><br>
-	
-	Enter the colors for each face in the form:  r,g,b<br>
-	Face 1: <input type="text" placeholder="r,g,b" id="f1"/><br>
-	Face 2: <input type="text" placeholder="r,g,b" id="f2"/></br>
-	Face 3: <input type="text" placeholder="r,g,b" id="f3"/><br>
-	Face 4: <input type="text" placeholder="r,g,b" id="f4"/><br>
-	Face 5: <input type="text" placeholder="r,g,b" id="f5"/><br>
-	Face 6: <input type="text" placeholder="r,g,b" id="f6"/><br>
-	<input type="button" value="Apply Colors" id="applyC"/>
 </body> 
