Sphere refinement implemented

--- a/demos/primitives/sphere.html
+++ b/demos/primitives/sphere.html
@@ -5,6 +5,7 @@
 	<script type="text/javascript" src="sphere.js"></script>
 </head>
 <body onload=initDemo()>
+	Icosphere with 0, 1, 2 and 3 iterations of refinement.</br>
 	<div id="container" style="width:500px; height:500px; float:left;">
 		<canvas id="view" width="500" height="500">
 			
